enable in-app judging
